--- a/index.html
+++ b/index.html
@@ -6,39 +6,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header">
-        <nav class="header-nav">
+    <!-- <img src="/img/shutterstock_1777602233_1.jpg" alt="пара" class="couple"> -->
 
-            <img src="/img/Group.svg" alt="logo">
+    <div class="wrapper">
 
-            <ul class="header-nav__list">
-                <li class="header-nav__item">Описание</li>
-                <li class="header-nav__item">О нас</li>
-                <li class="header-nav__item">Принцип работы</li>
-                <li class="header-nav__item">Требования</li>
-                <li class="header-nav__item">faq</li>
-                <li class="header-nav__item">Отзывы</li>
-                <li class="header-nav__item">Контакты</li>
-            </ul>
+        <!---------------------------------------- Header ------------------------------------------->
 
-            <ul class="header-nav__social">
-                <li class="header-nav__item">
-                    <img src="/img/social_whatapp.svg" alt="">
-                </li>
-                <li class="header-nav__item">
-                    <img src="/img/social_viber.svg" alt="">
-                </li>
-                <li class="header-nav__item">
-                    <img src="/img/social_tg.svg" alt="">
-                </li>
-            </ul>
-        </nav>
-    </header>
+        <header class="header">
+
+            <nav class="header-nav">
+
+                <a href="#">
+                    <img src="/img/Group.svg" alt="logo">
+                </a>
+
+                <ul class="header-nav__list">
+                    <a href="#">
+                        <li class="header-nav__item">Описание</li>
+                    </a>
+                    <a href="#">
+                        <li class="header-nav__item">О нас</li>
+                    </a>
+                    <a href="#">
+                        <li class="header-nav__item">Принцип работы</li>
+                    </a>
+                    <a href="#">
+                        <li class="header-nav__item">Требования</li>
+                    </a>
+                    <a href="#">
+                        <li class="header-nav__item">faq</li>
+                    </a>
+                    <a href="#">
+                        <li class="header-nav__item">Отзывы</li>
+                    </a>
+                    <a href="#">
+                        <li class="header-nav__item">Контакты</li>
+                    </a>
+                </ul>
+
+                <ul class="header-nav__social">
+                    <li class="header-nav__item">
+                        <a href="#">
+                            <img src="/img/social_whatsapp.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="header-nav__item">
+                        <a href="#">
+                            <img src="/img/social_viber.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="header-nav__item">
+                        <a href="#">
+                            <img src="/img/social_tg.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+
+            </nav>
+
+        </header>
+
+        <!---------------------------------------- Heading ------------------------------------------->
+
+        <section class="promo">
+
+            <div class="heading"><span class="job_description">
+                    Эскорт работа для девушек в Киеве
+                </span>
+
+                <h1>Хотите получать деньги, <br>
+                    просто наслаждаясь жизнью? <br>
+                    Звоните <span>+38(097)441-16-88</span>
+                </h1>
+            </div>
+
+            <div class="earning">
+                <button class="job_btn">Начать зарабатывать</button>
+
+                <ul class="header-nav__social">
+                    <li class="header-nav__item">
+                        <a href="#">
+                            <img src="/img/social_whatsapp.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="header-nav__item">
+                        <a href="#">
+                            <img src="/img/social_viber.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="header-nav__item">
+                        <a href="#">
+                            <img src="/img/social_tg.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
+
+    </div>
+
 </body>
 
 </html>
