Header&Promo finished

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- <img src="/img/shutterstock_1777602233_1.jpg" alt="пара" class="couple"> -->
+
 
     <div class="wrapper">
 
@@ -21,7 +21,7 @@
             <nav class="header-nav">
 
                 <a href="#">
-                    <img src="/img/Group.svg" alt="logo">
+                    <img src="/img/header/logo.svg" alt="logo">
                 </a>
 
                 <ul class="header-nav__list">
@@ -51,17 +51,17 @@
                 <ul class="header-nav__social">
                     <li class="header-nav__item">
                         <a href="#">
-                            <img src="/img/social_whatsapp.svg" alt="">
+                            <img src="/img/header/social_whatsapp.svg" alt="">
                         </a>
                     </li>
                     <li class="header-nav__item">
                         <a href="#">
-                            <img src="/img/social_viber.svg" alt="">
+                            <img src="/img/header/social_viber.svg" alt="">
                         </a>
                     </li>
                     <li class="header-nav__item">
                         <a href="#">
-                            <img src="/img/social_tg.svg" alt="">
+                            <img src="/img/header/social_tg.svg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -90,24 +90,37 @@
                 <ul class="header-nav__social">
                     <li class="header-nav__item">
                         <a href="#">
-                            <img src="/img/social_whatsapp.svg" alt="">
+                            <img src="/img/header/whatspapp_white.svg" alt="">
                         </a>
                     </li>
                     <li class="header-nav__item">
                         <a href="#">
-                            <img src="/img/social_viber.svg" alt="">
+                            <img src="/img/header/viber_white.svg" alt="">
                         </a>
                     </li>
                     <li class="header-nav__item">
                         <a href="#">
-                            <img src="/img/social_tg.svg" alt="">
+                            <img src="/img/header/tg_white.svg">
                         </a>
                     </li>
                 </ul>
             </div>
 
         </section>
+        <img src="/img/header/Mask_Group.png" alt="пара" class="couple">
 
+        <!------------------------------------------ question chat & callback ----------------------------------------------->
+    </div>
+    <div class="help">
+        <button class="btn_chat">
+        </button>
+
+        <button class="btn_callback">
+        </button>
+    </div>
+
+    <div class="wrapper">
+        
     </div>
 
 </body>
